Add vertical axes labels for quality control

--- a/Views/Pages/ReportPages/QualityControlReportPage.xaml
+++ b/Views/Pages/ReportPages/QualityControlReportPage.xaml
@@ -47,7 +47,7 @@
                                Style="{StaticResource CommonBlock}"
                                FontWeight="Bold"></TextBlock>
                     <TextBlock Style="{StaticResource CommonBlock}"
-                               Text="{Binding MeanDeviation, StringFormat={}{0:F2}}"></TextBlock>
+                               Text="{Binding MeanQuadraticDeviation, StringFormat={}{0:F2}}"></TextBlock>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Коэф. вариации"
@@ -75,13 +75,13 @@
                             <charts:ChartArea.AxisY>
                                 <charts:Axis x:Name="YAxis">
                                     <charts:Axis.CustomLabels>
-                                        <charts:CustomLabel Name="Negative3sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel Name="Negative2sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel Name="Negative1sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel Name="MeanDeviationCenterValue"></charts:CustomLabel>
-                                        <charts:CustomLabel Name="Positive1sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel Name="Positive2sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel Name="Positive3sValue"></charts:CustomLabel>
+                                        <charts:CustomLabel x:Name="Negative3sValue"></charts:CustomLabel>
+                                        <charts:CustomLabel x:Name="Negative2sValue"></charts:CustomLabel>
+                                        <charts:CustomLabel x:Name="Negative1sValue"></charts:CustomLabel>
+                                        <charts:CustomLabel x:Name="MeanDeviationCenterValue"></charts:CustomLabel>
+                                        <charts:CustomLabel x:Name="Positive1sValue"></charts:CustomLabel>
+                                        <charts:CustomLabel x:Name="Positive2sValue"></charts:CustomLabel>
+                                        <charts:CustomLabel x:Name="Positive3sValue"></charts:CustomLabel>
                                     </charts:Axis.CustomLabels>
                                 </charts:Axis>
                             </charts:ChartArea.AxisY>
@@ -90,19 +90,19 @@
                                              Name="Y2Axis">
                                     <charts:Axis.CustomLabels>
                                         <charts:CustomLabel Text="-3s"
-                                                            Name="Negative3s"></charts:CustomLabel>
+                                                            x:Name="Negative3s"></charts:CustomLabel>
                                         <charts:CustomLabel Text="-2s"
-                                                            Name="Negative2s"></charts:CustomLabel>
+                                                            x:Name="Negative2s"></charts:CustomLabel>
                                         <charts:CustomLabel Text="-1s"
-                                                            Name="Negative1s"></charts:CustomLabel>
+                                                            x:Name="Negative1s"></charts:CustomLabel>
                                         <charts:CustomLabel Text="X"
-                                                            Name="MeanDeviationCenter"></charts:CustomLabel>
+                                                            x:Name="MeanDeviationCenter"></charts:CustomLabel>
                                         <charts:CustomLabel Text="+1s"
-                                                            Name="Positive1s"></charts:CustomLabel>
+                                                            x:Name="Positive1s"></charts:CustomLabel>
                                         <charts:CustomLabel Text="+2s"
-                                                            Name="Positive2s"></charts:CustomLabel>
+                                                            x:Name="Positive2s"></charts:CustomLabel>
                                         <charts:CustomLabel Text="+3s"
-                                                            Name="Positive3s"></charts:CustomLabel>
+                                                            x:Name="Positive3s"></charts:CustomLabel>
                                     </charts:Axis.CustomLabels>
                                 </charts:Axis>
                             </charts:ChartArea.AxisY2>
