Add showing the applied services as a chart

--- a/Views/Pages/ReportPages/AppliedServicesReportPage.xaml
+++ b/Views/Pages/ReportPages/AppliedServicesReportPage.xaml
@@ -53,54 +53,20 @@
             <WindowsFormsHost Grid.Row="1"
                               Name="ChartHost"
                               Visibility="Collapsed">
-                <charts:Chart x:Name="ControlReportChart">
+                <charts:Chart x:Name="AppliedServicesChart">
                     <charts:Chart.Annotations>
                         <charts:TextAnnotation Text="2"></charts:TextAnnotation>
                     </charts:Chart.Annotations>
                     <charts:Chart.ChartAreas>
-                        <charts:ChartArea Name="QualityControl">
+                        <charts:ChartArea Name="AppliedServices">
                             <charts:ChartArea.AxisX>
                                 <charts:Axis IsLabelAutoFit="False"
-                                             Interval="2">
+                                             Interval="1">
                                     <charts:Axis.LabelStyle>
                                         <charts:LabelStyle Angle="-45"></charts:LabelStyle>
                                     </charts:Axis.LabelStyle>
                                 </charts:Axis>
                             </charts:ChartArea.AxisX>
-                            <charts:ChartArea.AxisY>
-                                <charts:Axis x:Name="YAxis">
-                                    <charts:Axis.CustomLabels>
-                                        <charts:CustomLabel x:Name="Negative3sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel x:Name="Negative2sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel x:Name="Negative1sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel x:Name="MeanDeviationCenterValue"></charts:CustomLabel>
-                                        <charts:CustomLabel x:Name="Positive1sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel x:Name="Positive2sValue"></charts:CustomLabel>
-                                        <charts:CustomLabel x:Name="Positive3sValue"></charts:CustomLabel>
-                                    </charts:Axis.CustomLabels>
-                                </charts:Axis>
-                            </charts:ChartArea.AxisY>
-                            <charts:ChartArea.AxisY2>
-                                <charts:Axis Enabled="True"
-                                             Name="Y2Axis">
-                                    <charts:Axis.CustomLabels>
-                                        <charts:CustomLabel Text="-3s"
-                                                            x:Name="Negative3s"></charts:CustomLabel>
-                                        <charts:CustomLabel Text="-2s"
-                                                            x:Name="Negative2s"></charts:CustomLabel>
-                                        <charts:CustomLabel Text="-1s"
-                                                            x:Name="Negative1s"></charts:CustomLabel>
-                                        <charts:CustomLabel Text="X"
-                                                            x:Name="MeanDeviationCenter"></charts:CustomLabel>
-                                        <charts:CustomLabel Text="+1s"
-                                                            x:Name="Positive1s"></charts:CustomLabel>
-                                        <charts:CustomLabel Text="+2s"
-                                                            x:Name="Positive2s"></charts:CustomLabel>
-                                        <charts:CustomLabel Text="+3s"
-                                                            x:Name="Positive3s"></charts:CustomLabel>
-                                    </charts:Axis.CustomLabels>
-                                </charts:Axis>
-                            </charts:ChartArea.AxisY2>
                         </charts:ChartArea>
                     </charts:Chart.ChartAreas>
                     <charts:Chart.Legends>
@@ -108,7 +74,7 @@
                         </charts:Legend>
                     </charts:Chart.Legends>
                     <charts:Chart.Series>
-                        <charts:Series x:Name="ControlReportSeries"
+                        <charts:Series x:Name="AppliedServicesSeries"
                                        ChartType="Spline"
                                        MarkerStyle="Circle"
                                        MarkerBorderColor="Black"
